public/css/neg.css
/*
 * Neg style
 *
 *
 *    ┏┓╻┏━╸┏━╸   ┏━╸┏━┓┏━┓   ┏━┓╺┳╸╻ ╻╻  ┏━╸
 *    ┃┗┫┣╸ ┃╺┓   ┃  ┗━┓┗━┓   ┗━┓ ┃ ┗┳┛┃  ┣╸
 *    ╹ ╹┗━╸┗━┛   ┗━╸┗━┛┗━┛   ┗━┛ ╹  ╹ ┗━╸┗━╸
 *
 *
 * thx to : [https://github.com/poole/poole, https://github.com/karloespiritu/BlackDoc]
 */


@font-face { font-family: 'iosevka2'; font-style: normal; font-weight: 400; src: url('/fonts/iosevka.ttf'); }
@font-face { font-family: 'iosevka2bold'; font-style: bold; src: url('/fonts/iosevka_bold.ttf'); }

#hideAll {
    position: fixed;
    left: 0px; 
    right: 0px; 
    top: 0px; 
    bottom: 0px; 
    background-color: black;
    z-index: 99; /* Higher than anything else in the document */
}

* { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }

html, body { margin: 0; padding: 0; }

html { font-family: "iosevka2", Helvetica, Arial, sans-serif; line-height: 1.35; }

body { 
    color: #a0aaaa; 
    background-color: #000000; 
    background: url('/images/bg.jpg');
    background-clip: border-box !important;
    background-origin: padding-box !important;
    background-attachment: fixed !important;
    background-repeat: no-repeat !important;
    background-size: cover !important;
    background-position: center top !important;
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
    font-size: 14pt;
    text-align: justify;
}

h1, h2, h3, h4, h5, h6 { 
    margin-bottom: .5rem;
    font-weight: bold;
    line-height: 1.25;
    text-rendering: optimizeLegibility;
    font-family: 'iosevka2', sans-serif; color: #aaa; 
}

h1 { font-size: 1.8rem; }
h2 { margin-top: 1rem; font-size: 1.5rem; }
h3 { margin-top: 1.5rem; font-size: 1.25rem; }
h4, h5, h6 { margin-top: 1rem; font-size: 1rem; }

h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
    font-family: 'iosevka2', sans-serif;
    color: #aaa;
    text-decoration: none;
    font-kerning: auto;
    font-feature-settings: "kern","liga","dlig","hlig","cswh";
    font-synthesis: weight style;
}

p { margin-top: 0; margin-bottom: 1rem; }

ul, ol, dl { margin-top: 0; margin-bottom: 1rem; }
dt { font-weight: bold; }
dd { margin-bottom: .5rem; }

a { color: #ffeb99; transition: color ease 0.3s; text-decoration: underline; }

/* No `:visited` state is required by default (browsers will use `a`) */
a strong { color: inherit; }

a:hover,
a:focus {
    text-decoration: none; important!
    color: #6a8c8c;
    filter: invert(100%);
}

.btn {
    display: inline-block;
    padding: .25rem 1rem;
    font-family: "PT Sans", sans-serif;
    color: #ebcb8b;
    border: .1rem solid #32343c;
    border-radius: .1rem;
}

.btn:hover, .btn:focus { color: #26282d; background-color: #ebcb8b; border-color: #ebcb8b; }
strong, b { color: #848471; }

code, pre {
    color: white;
    background-color: #101010;
    font-size: 12pt;
    font-family: "iosevka2";
    border-color: transparent;
    overflow: auto;
    word-wrap: normal;
    white-space: pre-wrap;
    max-height: 1024px;
}

hr { 
    display: block;
    height: 1px; 
    border: 0; 
    margin: 1.0em 0; 
    padding: 0;
    position: relative;
    border-top: 1px solid #445555;
}

abbr { font-size: 85%; font-weight: bold; color: #555; text-transform: uppercase; }
abbr[title] { cursor: help; border-bottom: 1px dotted #e5e5e5; }
blockquote { padding: .5rem 1rem; margin: .8rem 0; color: #666; border-left: .25rem solid #333; }
blockquote p:last-child { margin-bottom: 0; }
@media (min-width: 30em) { blockquote { padding-right: 5rem; padding-left: 1.25rem; } }
table { margin-bottom: 1rem; width: 100%; border: 1px solid #e5e5e5; border-collapse: collapse; }
td, th { padding: .25rem .5rem; border: 1px solid #333; }
/* tbody tr:nth-child(odd) td, */
/* tbody tr:nth-child(odd) th { background-color: #2b2836; } */

.pagination {
    overflow: hidden; /* clearfix */
    margin-left: -1rem;
    margin-right: -1rem;
    font-family: "PT Sans", Helvetica, Arial, sans-serif;
    color: #ccc;
    text-align: center;
}

/* Pagination items can be `span`s or `a`s */
.pagination-item { display: block; padding: 1rem; border: 1px solid #444; }
.pagination-item:first-child { margin-bottom: -1px; }

/* Only provide a hover state for linked pagination items */
a.pagination-item:hover { background-color: #f5f5f5; }

@media (min-width: 30em) {
    .pagination { margin: 3rem 0; }
    .pagination-item { float: left; width: 50%; }
    .pagination-item:first-child {
        margin-bottom: 0;
        border-top-left-radius:    4px;
        border-bottom-left-radius: 4px;
    }
    .pagination-item:last-child {
        margin-left: -1px;
        border-top-right-radius:    4px;
        border-bottom-right-radius: 4px;
    }
}

@media (min-width: 38em) { html { font-size: 16px; } }
@media (min-width: 48em) { html { font-size: 16px; } }
@media (min-width: 58em) { html { font-size: 20px; } } 

.message { 
    margin-bottom: 1rem;
    padding: 1rem;
    color: #3D8D8D; 
    background-color: #0a0f0f; 
}

.container {
    max-width: 38rem;
    padding-left:  0rem;
    padding-right: 0rem;
    margin-left:  auto;
    margin-right: auto;
}

.gist code { padding: 0; color: inherit; background-color: transparent; border-radius: 0; }
.gist pre { padding: 0; background-color: transparent; }
.gist .gist-file .gist-data { font-size: .8rem !important; line-height: 1.4; }
.gist .gist-file { font-family: Menlo, Monaco, "Courier New", monospace !important; }
.gist-data { background-color: #222 !important; border-bottom: 1px solid #333 !important; }
.gist .markdown-body { color: #999 !important; padding: 15px; }
.gist .markdown-body pre { background-color: #111 !important; }
.gist-file { border: 1px solid #333 !important; }
.gist-meta { background-color: #222 !important; }

.sidebar {
    text-align: center;
    padding: 2rem 1rem;
    background-color: #111111;
    background-image: url('/images/sidebar_bg.jpg'); !important
    background-origin: padding-box !important;
    background-repeat: no-repeat !important;
    background-size: cover !important;
    background-position: center top !important;
    overflow: auto;
}

@media (min-width: 48em) {
    .sidebar { position: fixed; top: 0; left: 0; bottom: 0; width: 18rem; text-align: left; }
}
.sidebar a { color: #6a8c8c; text-decoration: none; }

/* About section */
.sidebar-about h1 {
    color: #6a8c8c;
    margin-top: 0;
    font-family: 'iosevka2', serif;
    font-size: 2.25rem;
}

.sidebar-nav { margin-bottom: 1rem; }
.sidebar-nav-item { display: block; line-height: 1.75; }
a.sidebar-nav-item:hover,
a.sidebar-nav-item:focus { text-decoration: underline; }
.sidebar-nav-item.active { font-weight: bold; }

@media (min-width: 48em) {
    .sidebar-sticky {
        /*position: absolute;*/ /* to draw bottom */
        right:  1rem;
        bottom: 1rem;
        left:   1rem;
    }
}

.content { padding-top: 4rem; padding-bottom: 4rem; }
@media (min-width: 48em) {
    .content { max-width: 38rem; margin-left: 20rem; margin-right: 2rem; }
}
@media (min-width: 64em) { .content { margin-left: 21rem; margin-right: 4rem; } }

/*
 * Posts and pages
 * --------------
 * Each post is wrapped in `.post` and is used on default and post layouts. Each
 * page is wrapped in `.page` and is only used on the page layout.
 */
.page, .post { margin-bottom: 4em; }
/*.page, .post { margin-bottom: 4em; margin: -2em; padding: 1em; border: 1px solid #223333;}*/
.page-title, .post-title, .post-title a { color: #6a8c8c; }
.page-title, .post-title { margin-top: 0; }
/* Meta data line below post title */
.post-date { display: block; margin-top: -.5rem; margin-bottom: 1rem; color: #9a9a9a; }

/* Custom type Extend paragraphs with `.lead` for larger introductory text. */
.lead { font-size: 1.25rem; font-weight: 300; }

/* Related posts */
.related { padding-top: 2rem; padding-bottom: 2rem; border-top: 1px solid #eee; }
.related-posts { padding-left: 0; list-style: none; }
.related-posts h3 { margin-top: 0; }
.related-posts li small { font-size: 75%; color: #999; }
.related-posts li a:hover { color: #268bd2; text-decoration: none; }
.related-posts li a:hover small { color: inherit; }

@media (min-width: 48em) {
    .layout-reverse .sidebar { left: auto; right: 0; }
    .layout-reverse .content { margin-left: 2rem; margin-right: 20rem; }
}

@media (min-width: 64em) {
    .layout-reverse .content { margin-left: 4rem; margin-right: 22rem; }
}

.sidebar { background-color: #00000; }
.content a, .theme-base-0b .related-posts li a:hover { color: #6a8c8c; }
.content a, .related-posts li a:hover { color: #6a8c8c; }

/* Masthead Super small header above the content for site name and short description. */
.masthead { padding-top: 1rem; padding-bottom: 1rem; margin-bottom: 3rem; }
.masthead-title { margin-top: 0; margin-bottom: 0; color: #505050; }
.masthead-title a { color: #505050; }
.masthead-title small { font-size: 75%; font-weight: 400; color: #c0c0c0; letter-spacing: 0; }

::-webkit-scrollbar { width: 8px; }
::-webkit-scrollbar-button { width: 8px; height:5px; }
::-webkit-scrollbar-track { background: #333; border: thin solid #111; /*box-shadow: 0px 0px 3px #111 inset;*/ border-radius:10px; }
::-webkit-scrollbar-thumb { background:#222; border: thin solid #222; border-radius:10px; }
::-webkit-scrollbar-thumb:hover { background:#7d7d7d; }

img {
    display: block;
    max-width: 100%;
    margin: 0 0 1rem;
    margin-top: .5rem;
    border-radius: 0px;
    border: 2px solid;
    border-color: #1f3b4f;
    padding: 0.25rem; !important
}

.img_noborder { border: 1px solid; border-color: #1f3b4f; }
.about_table { width: 150%; table-layout: fixed; text-align: left; background:transparent; } 
.about_td { border: 1; border-spacing: 1; padding: 1; margin: 0; border-color: transparent; background-color: !transparent; !important }

